ec2.yaml
Description: >
    This templatec2 is used to launch a EC2 Instance which is having EFS Mount to it 

Mappings: 
  RegionMap: 
    us-east-1: 
      "32": "ami-8c1be5f6"
    us-east-2: 
      "32": "ami-c5062ba0"
    us-west-1: 
      "32": "ami-02eada62"
    us-west-2: 
      "32": "ami-e689729e"
    eu-west-1: 
      "32": "ami-acd005d5"
    eu-west-2:
       "32": "ami-1a7f6d7e"
    ap-southeast-1: 
      "32": "ami-0797ea64"
    ap-southeast-2:
       "32": "ami-8536d6e7"
    ap-northeast-1: 
      "32": "ami-2a69be4c"
    ap-northeast-2:
       "32": "ami-9bec36f5"
    ap-south-1:
      "32": "ami-4fc58420"
    eu-central-1:
       "32": "ami-c7ee5ca8"
    ca-central-1:
       "32": "ami-fd55ec99"    
    sa-east-1:
      "32": "ami-f1344b9d"

Resources:
  WebServerInstance:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: !FindInMap [RegionMap, !Ref "AWS::Region", '32']
      InstanceType: t2.micro
      KeyName:  chef-demo
      SecurityGroups:
        - Ref: SecurityGroup
      UserData:
        Fn::Base64: !Sub |
          #!/bin/bash
          yum update -y
          yum install -y nfs-utils
          mkdir ~/efs
          cd ~/efs
          echo "EFS DOne" > demo.txt

  SecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow http to client host 
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 2049
          ToPort: 2049
          CidrIp: 0.0.0.0/0
